--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             document.getElementById('contact-form').addEventListener('submit', function(event) {
                 event.preventDefault();
                 // these IDs from the previous steps
-                emailjs.sendForm('contact_service', 'contact_form', this)
+                emailjs.sendForm('service_lp7zq1o', 'contact_form', this)
                     .then(() => {
                         console.log('SUCCESS!');
                     }, (error) => {
